--- a/dashboard.html
+++ b/dashboard.html
@@ -125,72 +125,89 @@
       </div>
     </div>
     <!--===== Navbar  =====-->
-    <!--===== Event Auctions  =====-->
-    <section class="py-10">
+    <!--===== Dashboard Section  =====-->
+    <section class="p-3 mb-10">
       <div class="container">
-        <div class="row mb-3">
-          <div class="col-md-12">
-            <div class="grid lg:flex justify-between items-center">
-              <div>
-                <p class="text-xl font-semibold">EVENT AUCTIONS</p>
-              </div>
-              <div class="auction-nav">
-                <ul class="bg-grey nav nav-pills mb-3 p-2 rounded-lg" id="pills-tab" role="tablist">
-                  <li class="nav-item sm:w-100 lg:w-auto" role="presentation">
-                    <button class="auction-link nav-link font-medium s lg:w-auto active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Live Auctions</button>
-                  </li>
-                  <li class="nav-item sm:w-100 lg:w-auto" role="presentation">
-                    <button class="auction-link nav-link font-medium  lg:w-auto" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Upcoming Auctions</button>
-                  </li>
-                  <li class="nav-item sm:w-100 lg:w-auto" role="presentation">
-                    <button class="auction-link nav-link font-medium lg:w-auto" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Past Auctions</button>
-                  </li>
-                </ul>
+        <div class="row">
+          <div class="col-md-12 border-2 rounded-sm border-opacity-35 py-5 px-5">
+            <div class="row mb-2">
+              <div class="col-md-12">
+                <p class="text-base font-bold mb-0">Hello Balaji 👋</p>
+                <p class="text-lg grey-text opacity-35">Welcome to Dashboard</p>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <div class="auction-sec grid lg:flex rounded-lg overflow-hidden" style="border: 2px solid #f3722a73;">
-              <div class="auction-date text-center place-content-center p-4 px-5">
-                <p class="mb-1 text-xl font-medium">Wed</p>
-                <h4 class="font-bold text-3xl">28</h4>
-              </div>
-              <div class="flex-1 grid lg:flex justify-center lg:justify-between p-3">
-                <div class="flex-1 grid gap-2 lg:gap-1 mb-2 lg:mb-0">
-                  <p class="mb-0 text-xl font-semibold">Commercial property for Sale</p>
-                  <p class="mb-0 text-base font-medium grey-text flex gap-2 items-center">
-                    <img src="./assets/img/icon/Calendar.svg" class="w-4" alt="">28 Nov 2024 05:00 PM
-                  </p>
-                  <div class="flex gap-3">
-                    <p class="mb-0 text-base font-medium grey-text flex gap-1 items-center ">
-                      <img src="./assets/img/icon/Location.svg" class="w-5" alt="">Venue
-                    </p>
-                    <p class="mb-0 text-base font-medium grey-text flex gap-1 items-center flex-1">
-                      <img src="./assets/img/icon/Time Square.svg" class="w-5" alt="">15 mins left
-                    </p>
-                  </div>
-                </div>
-                <div>
-                  <div class="flex gap-3">
-                    <div class="grid justify-items-center">
-                      <div class="px-2 py-2 border rounded-lg text-center grid justify-items-center">
-                        <p class="flex gap-2 items-center text-sm grey-text font-medium">
-                          <img class="w-4" src="./assets/img/icon/Paper.svg" alt="">25 Lots
-                        </p>
-                        <a href="" class="bg-grey grey-text font-medium text-sm w-100 px-5 py-1 rounded-md">4 LOTS LEFT</a>
-                      </div>
-                    </div>
-                    <a href="" class="border rounded-lg grid justify-items-center gap-2 py-2 px-2" style="align-content: center">
-                      <img src="./assets/img/icon/Downlaod.svg" class="w-4" alt="">
-                      <p class="mb-0 text-sm font-medium grey-text">Catalogue</p>
+            <div class="row">
+              <div class="col-md-6 mb-4">
+                <div class="boarding-box flex flex-row justify-between items-center pl-6 pr-2 py-4 border-2 border-opacity-35 bg-white rounded-lg overflow-hidden ">
+                  <div class="flex flex-col justify-center">
+                    <h5 class="uppercase font-semibold text-sm grey-text">Watchlist</h5>
+                    <h2 class="font-bold">43</h2>
+                    <a href="" class="text-xs flex items-center gap-2 opacity-35">View all <img src="./assets/img/icon/Arrow - Right.svg" class="w-3 h-auto" alt="">
                     </a>
                   </div>
-                  <div class="mt-3 lg:mt-1">
-                    <ul class="list-disc mb-0" style="margin-left: 18%;">
-                      <li class="mb-0 mr-10 text-green-600 font-semibold">Live</li>
-                    </ul>
+                  <div class="flex items-baseline relative boarding-circle w-24 h-100">
+                    <div class="absolute z-40 w-100 h-100 left-1/2 top-1/2">
+                      <img src="/assets/img/icon/Bookmark.svg" class="w-10 h-10 opacity-90" alt="">
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 mb-4">
+                <div class="boarding-box flex flex-row justify-between items-center pl-6 pr-2 py-4 border-2 border-opacity-35 bg-white rounded-lg overflow-hidden ">
+                  <div class="flex flex-col justify-center">
+                    <h5 class="uppercase font-semibold text-sm grey-text">Bid Registration</h5>
+                    <h2 class="font-bold">6</h2>
+                    <a href="" class="text-xs flex items-center gap-2 opacity-35">View all <img src="./assets/img/icon/Arrow - Right.svg" class="w-3 h-auto" alt="">
+                    </a>
+                  </div>
+                  <div class="flex items-baseline relative boarding-circle w-24 h-100">
+                    <div class="absolute z-40 w-100 h-100 left-1/2 top-1/2">
+                      <img src="/assets/img/icon/Calendar-primary.svg" class="w-10 h-10 opacity-90" alt="">
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 mb-4">
+                <div class="boarding-box flex flex-row justify-between items-center pl-6 pr-2 py-4 border-2 border-opacity-35 bg-white rounded-lg overflow-hidden ">
+                  <div class="flex flex-col justify-center">
+                    <h5 class="uppercase font-semibold text-sm grey-text">My Biddings</h5>
+                    <h2 class="font-bold">7</h2>
+                    <a href="" class="text-xs flex items-center gap-2 opacity-35">View all <img src="./assets/img/icon/Arrow - Right.svg" class="w-3 h-auto" alt="">
+                    </a>
+                  </div>
+                  <div class="flex items-baseline relative boarding-circle w-24 h-100">
+                    <div class="absolute z-40 w-100 h-100 left-1/2 top-1/2">
+                      <img src="/assets/img/icon/briefcase-alt.svg" class="w-10 h-10 opacity-90" alt="">
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 mb-4">
+                <div class="boarding-box flex flex-row justify-between items-center pl-6 pr-2 py-4 border-2 border-opacity-35 bg-white rounded-lg overflow-hidden ">
+                  <div class="flex flex-col justify-center">
+                    <h5 class="uppercase font-semibold text-sm grey-text">Winnings</h5>
+                    <h2 class="font-bold">3</h2>
+                    <a href="" class="text-xs flex items-center gap-2 opacity-35">View all <img src="./assets/img/icon/Arrow - Right.svg" class="w-3 h-auto" alt="">
+                    </a>
+                  </div>
+                  <div class="flex items-baseline relative boarding-circle w-24 h-100">
+                    <div class="absolute z-40 w-100 h-100 left-1/2 top-1/2">
+                      <img src="/assets/img/icon/trophy.svg" class="w-10 h-10 opacity-90" alt="">
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-12 mb-4">
+                <div class="boarding-box flex flex-row justify-between items-center pl-6 pr-2 py-10 border-2 border-opacity-35 bg-white rounded-lg overflow-hidden ">
+                  <div class="flex flex-row flex-1 items-center justify-between">
+                    <h5 class="uppercase font-semibold text-sm grey-text flex-1">Profile DEtails</h5>
+                    <a href="" class="text-xs flex items-center gap-2 opacity-35 pr-9">View all <img src="./assets/img/icon/Arrow - Right.svg" class="w-3 h-auto" alt="">
+                    </a>
+                  </div>
+                  <div class="flex items-baseline relative boarding-circle w-24 h-100">
+                    <div class="absolute z-40 w-100 h-100 left-1/2 top-1/2">
+                      <img src="/assets/img/icon/card.svg" class="w-10 h-10 opacity-90" alt="">
+                    </div>
                   </div>
                 </div>
               </div>
@@ -199,7 +216,7 @@
         </div>
       </div>
     </section>
-    <!--===== Event Auctions  =====-->
+    <!--===== Dashboard Section  =====-->
     <!--===== Marquee Section  =====-->
     <section>
       <div class="marquee py-3">
@@ -330,74 +347,5 @@
     <script type="text/javascript" src="./assets/css/slick/slick.min.js"></script>
     <!-- fontawesom 6 JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js" integrity="sha512-b+nQTCdtTBIRIbraqNEwsjB6UvL3UEMkXnhzd8awtCYh0Kcsjl9uEgwVFVbhoj3uu1DO1ZMacNvLoyJJiNfcvg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script>
-      $(document).ready(function() {
-        $('.banner-slick').slick({
-          slidesToShow: 1,
-          slidesToScroll: 1,
-          arrows: true,
-          fade: true,
-          dots: false,
-        });
-      });
-      $('.property-slick').slick({
-        infinite: true,
-        dots: false,
-        slidesToShow: 4,
-        slidesToScroll: 3,
-        autoplay: true,
-        autoplaySpeed: 2000,
-        responsive: [{
-          breakpoint: 1024,
-          settings: {
-            slidesToShow: 3,
-            slidesToScroll: 3,
-            infinite: true,
-            dots: true
-          }
-        }, {
-          breakpoint: 769,
-          settings: {
-            slidesToShow: 2,
-            slidesToScroll: 2
-          }
-        }, {
-          breakpoint: 480,
-          settings: {
-            slidesToShow: 1,
-            slidesToScroll: 1
-          }
-        }]
-      })
-      $('.sold-slick').slick({
-        infinite: true,
-        dots: true,
-        slidesToShow: 4,
-        slidesToScroll: 2,
-        autoplay: true,
-        autoplaySpeed: 2000,
-        responsive: [{
-          breakpoint: 1024,
-          settings: {
-            slidesToShow: 3,
-            slidesToScroll: 3,
-            infinite: true,
-            dots: true
-          }
-        }, {
-          breakpoint: 769,
-          settings: {
-            slidesToShow: 2,
-            slidesToScroll: 2
-          }
-        }, {
-          breakpoint: 480,
-          settings: {
-            slidesToShow: 1,
-            slidesToScroll: 1
-          }
-        }]
-      })
-    </script>
   </body>
 </html>
