--- a/request-validation-form.html
+++ b/request-validation-form.html
@@ -125,73 +125,101 @@
       </div>
     </div>
     <!--===== Navbar  =====-->
-    <!--===== Event Auctions  =====-->
-    <section class="py-10">
+    <!--===== Request Form Section  =====-->
+    <section class="bg-secondary py-9">
       <div class="container">
-        <div class="row mb-3">
-          <div class="col-md-12">
-            <div class="grid lg:flex justify-between items-center">
-              <div>
-                <p class="text-xl font-semibold">EVENT AUCTIONS</p>
-              </div>
-              <div class="auction-nav">
-                <ul class="bg-grey nav nav-pills mb-3 p-2 rounded-lg" id="pills-tab" role="tablist">
-                  <li class="nav-item sm:w-100 lg:w-auto" role="presentation">
-                    <button class="auction-link nav-link font-medium s lg:w-auto active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Live Auctions</button>
-                  </li>
-                  <li class="nav-item sm:w-100 lg:w-auto" role="presentation">
-                    <button class="auction-link nav-link font-medium  lg:w-auto" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Upcoming Auctions</button>
-                  </li>
-                  <li class="nav-item sm:w-100 lg:w-auto" role="presentation">
-                    <button class="auction-link nav-link font-medium lg:w-auto" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Past Auctions</button>
-                  </li>
-                </ul>
+        <div class="row relative">
+          <div class="absolute v-form-img">
+            <img src="./assets/img/form-comp.svg" class="w-24" alt="">
+          </div>
+          <div class="col-lg-4 pr-0 r-content bg-white rounded-l-sm">
+            <div class="px-4 py-10 flex flex-col mb-4 gap-3">
+              <div class="flex justify-center py-10 rounded-3xl" style="background-color: #FFF3EC;">
+                <img src="./assets/img/validate-form.svg" alt="">
               </div>
             </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <div class="auction-sec grid lg:flex rounded-lg overflow-hidden" style="border: 2px solid #f3722a73;">
-              <div class="auction-date text-center place-content-center p-4 px-5">
-                <p class="mb-1 text-xl font-medium">Wed</p>
-                <h4 class="font-bold text-3xl">28</h4>
+          <div class="col-lg-8 bg-white rounded-lg rounded-l-none py-10 px-5" style="padding-left: 0px !important;">
+            <!-- Additional Details -->
+            <div class="r-form-head">
+              <div class="row">
+                <h4 class="font-semibold text-xl text-default p-0 m-0">Request Validation</h4>
               </div>
-              <div class="flex-1 grid lg:flex justify-center lg:justify-between p-3">
-                <div class="flex-1 grid gap-2 lg:gap-1 mb-2 lg:mb-0">
-                  <p class="mb-0 text-xl font-semibold">Commercial property for Sale</p>
-                  <p class="mb-0 text-base font-medium grey-text flex gap-2 items-center">
-                    <img src="./assets/img/icon/Calendar.svg" class="w-4" alt="">28 Nov 2024 05:00 PM
-                  </p>
-                  <div class="flex gap-3">
-                    <p class="mb-0 text-base font-medium grey-text flex gap-1 items-center ">
-                      <img src="./assets/img/icon/Location.svg" class="w-5" alt="">Venue
-                    </p>
-                    <p class="mb-0 text-base font-medium grey-text flex gap-1 items-center flex-1">
-                      <img src="./assets/img/icon/Time Square.svg" class="w-5" alt="">15 mins left
-                    </p>
-                  </div>
+              <div class="row py-2 mt-4 r-form-field bg-white rounded-md overflow-hidden border border-opacity-25">
+                <div class="col-md-12 pt-2 mb-3">
+                  <p class="mb-0 text-sm font-semibold">Address Details</p>
                 </div>
-                <div>
-                  <div class="flex gap-3">
-                    <div class="grid justify-items-center">
-                      <div class="px-2 py-2 border rounded-lg text-center grid justify-items-center">
-                        <p class="flex gap-2 items-center text-sm grey-text font-medium">
-                          <img class="w-4" src="./assets/img/icon/Paper.svg" alt="">25 Lots
-                        </p>
-                        <a href="" class="bg-grey grey-text font-medium text-sm w-100 px-5 py-1 rounded-md">4 LOTS LEFT</a>
-                      </div>
-                    </div>
-                    <a href="" class="border rounded-lg grid justify-items-center gap-2 py-2 px-2" style="align-content: center">
-                      <img src="./assets/img/icon/Downlaod.svg" class="w-4" alt="">
-                      <p class="mb-0 text-sm font-medium grey-text">Catalogue</p>
-                    </a>
-                  </div>
-                  <div class="mt-3 lg:mt-1">
-                    <ul class="list-disc mb-0" style="margin-left: 18%;">
-                      <li class="mb-0 mr-10 text-green-600 font-semibold">Live</li>
-                    </ul>
-                  </div>
+                <div class="col-md-6 flex flex-col mb-3">
+                  <label for="">HouseName / Number</label>
+                  <input type="text" class="bg-transparent">
+                </div>
+                <div class="col-md-6 flex flex-col mb-3">
+                  <label for="">Street</label>
+                  <input type="text" class="bg-transparent">
+                </div>
+                <div class="col-md-6 flex flex-col mb-3">
+                  <label for="">Town</label>
+                  <input type="text" class="bg-transparent">
+                </div>
+                <div class="col-md-6 flex flex-col mb-3">
+                  <label for="">Country</label>
+                  <input type="text" class="bg-transparent">
+                </div>
+                <div class="col-md-6 flex flex-col mb-3">
+                  <label for="">Postcode</label>
+                  <input type="text" class="bg-transparent">
+                </div>
+                <div class="col-md-6 flex flex-col mb-3">
+                  <label for="">Property Type</label>
+                  <input type="text" class="bg-transparent">
+                </div>
+                <div class="col-md-6 flex flex-col mb-3">
+                  <label for="">No of Bedrooms</label>
+                  <input type="text" class="bg-transparent">
+                </div>
+                <div class="col-md-6 flex flex-col mb-3">
+                  <label for="">Years remainings on Lease (If Applicable)</label>
+                  <input type="text" class="bg-transparent">
+                </div>
+              </div>
+            </div>
+            <!-- Personal Details -->
+            <div class="r-form-head">
+              <div class="row py-2 mt-4 r-form-field bg-white rounded-md overflow-hidden border border-opacity-25">
+                <div class="col-md-12 pt-2 mb-3">
+                  <p class="mb-0 text-sm font-semibold">Personal Details</p>
+                </div>
+                <div class="col-md-12 flex flex-col mb-3">
+                  <label for="">Preferred Reserve Price</label>
+                  <input type="text" class="bg-transparent">
+                </div>
+                <div class="col-md-6 flex flex-col mb-3">
+                  <label for="">First Name</label>
+                  <input type="text" class="bg-transparent">
+                </div>
+                <div class="col-md-6 flex flex-col mb-3">
+                  <label for="">Last Name</label>
+                  <input type="text" class="bg-transparent">
+                </div>
+                <div class="col-md-6 flex flex-col mb-3">
+                  <label for="">Mobile Number</label>
+                  <input type="tel" class="bg-transparent">
+                </div>
+                <div class="col-md-6 flex flex-col mb-3">
+                  <label for="">Email</label>
+                  <input type="email" class="bg-transparent">
+                </div>
+                <div class="col-md-12 flex flex-col mb-3">
+                  <textarea placeholder="Any other Information" name="" id="" cols="30" rows="10" class="w-100"></textarea>
+                </div>
+              </div>
+              <div class="row r-form-field mt-3">
+                <div class="col-md-6 flex flex-row gap-3 items-center p-0 my-auto">
+                  <input type="checkbox" class="m-0">
+                  <label for="">Tick the box for future property actions </label>
+                </div>
+                <div class="col-md-6 flex flex-row justify-end px-0">
+                  <input type="button" value="Submit" class="px-32" id="">
                 </div>
               </div>
             </div>
@@ -199,7 +227,7 @@
         </div>
       </div>
     </section>
-    <!--===== Event Auctions  =====-->
+    <!--===== Request Form Section  =====-->
     <!--===== Marquee Section  =====-->
     <section>
       <div class="marquee py-3">
@@ -330,74 +358,5 @@
     <script type="text/javascript" src="./assets/css/slick/slick.min.js"></script>
     <!-- fontawesom 6 JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js" integrity="sha512-b+nQTCdtTBIRIbraqNEwsjB6UvL3UEMkXnhzd8awtCYh0Kcsjl9uEgwVFVbhoj3uu1DO1ZMacNvLoyJJiNfcvg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script>
-      $(document).ready(function() {
-        $('.banner-slick').slick({
-          slidesToShow: 1,
-          slidesToScroll: 1,
-          arrows: true,
-          fade: true,
-          dots: false,
-        });
-      });
-      $('.property-slick').slick({
-        infinite: true,
-        dots: false,
-        slidesToShow: 4,
-        slidesToScroll: 3,
-        autoplay: true,
-        autoplaySpeed: 2000,
-        responsive: [{
-          breakpoint: 1024,
-          settings: {
-            slidesToShow: 3,
-            slidesToScroll: 3,
-            infinite: true,
-            dots: true
-          }
-        }, {
-          breakpoint: 769,
-          settings: {
-            slidesToShow: 2,
-            slidesToScroll: 2
-          }
-        }, {
-          breakpoint: 480,
-          settings: {
-            slidesToShow: 1,
-            slidesToScroll: 1
-          }
-        }]
-      })
-      $('.sold-slick').slick({
-        infinite: true,
-        dots: true,
-        slidesToShow: 4,
-        slidesToScroll: 2,
-        autoplay: true,
-        autoplaySpeed: 2000,
-        responsive: [{
-          breakpoint: 1024,
-          settings: {
-            slidesToShow: 3,
-            slidesToScroll: 3,
-            infinite: true,
-            dots: true
-          }
-        }, {
-          breakpoint: 769,
-          settings: {
-            slidesToShow: 2,
-            slidesToScroll: 2
-          }
-        }, {
-          breakpoint: 480,
-          settings: {
-            slidesToShow: 1,
-            slidesToScroll: 1
-          }
-        }]
-      })
-    </script>
   </body>
 </html>
